<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:title="@string/home_title"
    android:background="@color/primary"
    tools:context=".HomeFragment">

    <!--    Title of the app displayed (Ladle Library) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold" />

        <!--    Logo (made using figma) -->
        <ImageView
            android:id="@+id/logo_main"
            android:layout_width="300dp"
            android:layout_height="325dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/logo_description"
            android:layout_marginBottom="25dp"
            android:src="@drawable/logo" />

        <!--    Button to access the list of user recipes -->
        <Button
            android:id="@+id/recipe_list_button_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_list_title"
            android:drawablePadding="8dp"
            android:textSize="20sp"
            android:backgroundTint="@color/secondary"
            android:textColor="@color/black"
            android:layout_marginTop="30dp" />

        <!--    Button to access the activity to add a new recipe-->
        <Button
            android:id="@+id/add_button_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_recipe_title"
            android:drawablePadding="8dp"
            android:textSize="20sp"
            android:backgroundTint="@color/secondary"
            android:textColor="@color/black"
            android:layout_marginTop="28dp" />
    </LinearLayout>

</FrameLayout>