<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecipeActivity"
    android:background="@color/primary">

    <!--    Toolbar (to navigate activities)-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/secondary"
        app:title="@string/add_recipe_title"
        app:titleTextColor="@color/black"
        app:navigationIcon="@drawable/baseline_menu_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- ScrollView allowing all content (form fields buttons and headings) to be viewed by scrolling -->
    <ScrollView
        android:id="@+id/scroll_view_add"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!--        constraintlayout that contains and organises content -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dp">

            <!-- Cancel Button that allows users to cancel recipe creation and go back to previous activity -->
            <Button
                android:id="@+id/cancel_button_add"
                android:layout_width="60dp"
                android:layout_height="34dp"
                android:text="@string/cancel_button_text"
                android:textSize="12sp"
                android:padding="1dp"
                android:backgroundTint="@color/secondary"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Title of page making the current activity clear straight away to the user-->
            <TextView
                android:id="@+id/page_title_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_recipe_title"
                android:textSize="29sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                app:layout_constraintStart_toEndOf="@id/cancel_button_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/cancel_button_add"
                app:layout_constraintBottom_toBottomOf="@id/cancel_button_add" />

            <!-- Title label where users are prompted to enter the title of the recipe-->
            <TextView
                android:id="@+id/title_label_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_label_text"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/page_title_add"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="25dp"/>

            <!-- Input where users must enter the title of the recipe they wish to add -->
            <EditText
                android:id="@+id/title_input_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/secondary"
                app:layout_constraintTop_toBottomOf="@id/title_label_add"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- label indicating a photo is an optional addition to recipe info -->
            <TextView
                android:id="@+id/photo_label_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/photo_label_text"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/title_input_add"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="25dp"/>

            <!-- button where users can upload a photo to represent the recipe they are adding-->
            <Button
                android:id="@+id/photo_upload_button_add"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/upload_photo_text"
                android:textSize="15sp"
                android:backgroundTint="@color/secondary"
                android:textColor="@color/black"
                android:padding="3dp"
                app:layout_constraintTop_toBottomOf="@id/photo_label_add"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- label indicating a short description of the recipe is required below it -->
            <TextView
                android:id="@+id/description_label_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/description_label_text"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/photo_upload_button_add"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="25dp"/>
            <!--            input where users enter their short description of the recipe -->
            <EditText
                android:id="@+id/description_input_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minLines="2"
                android:background="@color/secondary"
                app:layout_constraintTop_toBottomOf="@id/description_label_add"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Ingredients label indicating list of ingredients should be entered-->
            <TextView
                android:id="@+id/ingredients_label_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ingredients_label_text"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/description_input_add"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="25dp"/>

            <!--            input box for entering in ingredients -->
            <EditText
                android:id="@+id/ingredients_input_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minLines="6"
                android:background="@color/secondary"
                app:layout_constraintTop_toBottomOf="@id/ingredients_label_add"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Instructions label -->
            <TextView
                android:id="@+id/instructions_label_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/instructions_label_text"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/ingredients_input_add"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="25dp"/>

            <!--            input for list of instructions on how to carry recipe out -->
            <EditText
                android:id="@+id/instructions_input_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minLines="6"
                android:background="@color/secondary"
                app:layout_constraintTop_toBottomOf="@id/instructions_label_add"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Category label -->
            <TextView
                android:id="@+id/category_label_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/category_label_text"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/instructions_input_add"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="25dp"/>

            <!--            Spinner that allows category to be selected from predetermined list (breakfast, brunch, lunch, dinner, desserts, other)-->
            <Spinner
                android:id="@+id/category_input_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/secondary"
                app:layout_constraintTop_toBottomOf="@id/category_label_add"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Save Button allowing a user to save their recipe -->
            <!--            when logic is implemented, it should handle senarios when not all required fields have been filled in by failing to save and alerting the user -->
            <Button
                android:id="@+id/save_button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondary"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:padding="1dp"
                app:layout_constraintTop_toBottomOf="@id/category_input_add"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/save_button_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
