<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

<!-- recipe image (if not uploaded, placeholder image is displayed)-->
    <ImageView
        android:id="@+id/recipe_photo_item"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/photo_label_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

<!-- recipe title displayed (to be made clickable later that leads to view recipe page-->
    <TextView
        android:id="@+id/recipe_title_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/recipe_photo_item"
        app:layout_constraintTop_toTopOf="@id/recipe_photo_item"
        app:layout_constraintEnd_toStartOf="@+id/edit_button"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"/>

    <!-- The recipe's short description is to be shown here -->
    <TextView
        android:id="@+id/recipe_description_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/recipe_title_item"
        app:layout_constraintTop_toBottomOf="@id/recipe_title_item"
        app:layout_constraintEnd_toEndOf="@id/recipe_title_item"/>

    <!-- Edit button (directed to the activity to edit a specific recipe)-->
    <Button
        android:id="@+id/edit_button"
        android:layout_width="60dp"
        android:layout_height="34dp"
        android:backgroundTint="@color/secondary"
        android:textColor="@color/black"
        android:text="@string/edit_button_text"
        android:textSize="12sp"
        android:padding="4dp"
        app:layout_constraintTop_toTopOf="@id/recipe_photo_item"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Delete button (if pressed, user is asked to confirm and if they do, the recipe is deleted) -->
    <Button
        android:id="@+id/delete_button_item"
        android:layout_width="60dp"
        android:layout_height="34dp"
        android:backgroundTint="@color/secondary"
        android:textColor="@color/black"
        android:text="@string/delete_button_text"
        android:textSize="12sp"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/edit_button"
        app:layout_constraintStart_toStartOf="@id/edit_button"
        app:layout_constraintEnd_toEndOf="@id/edit_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>
