<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="co.uk.bbk.ladlelibrary.MainViewModel" />
    </data>

    <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecipeFragment">

        <ScrollView
            android:id="@+id/scroll_view_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <!--        constraintlayout that contains and organises content -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="40dp">

                <!-- Cancel Button that allows users to cancel recipe creation and go back to previous activity -->
                <Button
                    android:id="@+id/cancel_button_add"
                    android:layout_width="60dp"
                    android:layout_height="34dp"
                    android:text="@string/cancel_button_text"
                    android:textSize="12sp"
                    android:padding="1dp"
                    android:backgroundTint="@color/secondary"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <!-- Title of page making the current activity clear straight away to the user-->
                <TextView
                    android:id="@+id/page_title_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add_recipe_title"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:gravity="center"
                    app:layout_constraintStart_toEndOf="@id/cancel_button_add"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/cancel_button_add"
                    app:layout_constraintBottom_toBottomOf="@id/cancel_button_add" />

                <!-- Title label where users are prompted to enter the title of the recipe-->
                <TextView
                    android:id="@+id/title_label_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_label_text"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/page_title_add"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="25dp"/>

                <!-- Input where users must enter the title of the recipe they wish to add -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title_input_layout_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="@color/secondary"
                    app:boxStrokeErrorColor="@color/secondary"
                    app:errorTextColor="@color/error"
                    app:layout_constraintTop_toBottomOf="@id/title_label_add"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title_input_add"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:background="@color/secondary"
                        app:boxStrokeErrorColor="@color/secondary"
                        android:textSize="20sp"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@={viewModel.title}" />

                </com.google.android.material.textfield.TextInputLayout>

                <!-- label indicating a photo is an optional addition to recipe info -->
                <TextView
                    android:id="@+id/photo_label_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/photo_label_text"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/title_input_layout_add"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="25dp"/>

                <!-- button where users can upload a photo to represent the recipe they are adding-->
                <ImageButton
                    android:id="@+id/photo_upload_button_add"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:scaleType="centerCrop"
                    android:background="@drawable/circle"
                    android:contentDescription="@string/photo_label_text"
                    android:clipToOutline="true"
                    android:elevation="4dp"
                    android:cropToPadding="true"
                    android:src="@drawable/placeholder_photo"
                    android:textColor="@color/black"
                    android:padding="3dp"
                    app:layout_constraintTop_toBottomOf="@id/photo_label_add"
                    app:layout_constraintStart_toStartOf="parent" />

                <!-- label indicating a short description of the recipe is required below it -->
                <TextView
                    android:id="@+id/description_label_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/description_label_text"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/photo_upload_button_add"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="25dp"/>
                <!--            input where users enter their short description of the recipe -->
                <EditText
                    android:id="@+id/description_input_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minLines="2"
                    android:padding="10dp"
                    android:autofillHints="@string/no_need_for_hint_with_label_indicators"
                    android:textSize="19sp"
                    android:inputType="text"
                    android:hint="@string/no_need_for_hint_with_label_indicators"
                    android:text="@={viewModel.shortDescription}"
                    android:background="@color/secondary"
                    app:layout_constraintTop_toBottomOf="@id/description_label_add"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <!-- Ingredients label indicating list of ingredients should be entered-->
                <TextView
                    android:id="@+id/ingredients_label_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients_label_text"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/description_input_add"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="25dp"/>

                <!--            input box for entering in ingredients -->
                <EditText
                    android:id="@+id/ingredients_input_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minLines="6"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:inputType="text"
                    android:autofillHints="@string/no_need_for_hint_with_label_indicators"
                    android:text="@={viewModel.ingredients}"
                    android:background="@color/secondary"
                    app:layout_constraintTop_toBottomOf="@id/ingredients_label_add"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <!-- Instructions label -->
                <TextView
                    android:id="@+id/instructions_label_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions_label_text"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/ingredients_input_add"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="25dp"/>

                <!--            input for list of instructions on how to carry recipe out -->
                <EditText
                    android:id="@+id/instructions_input_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minLines="6"
                    android:inputType="text"
                    android:autofillHints="@string/no_need_for_hint_with_label_indicators"
                    android:text="@={viewModel.instructions}"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:background="@color/secondary"
                    app:layout_constraintTop_toBottomOf="@id/instructions_label_add"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <!-- Category label -->
                <TextView
                    android:id="@+id/category_label_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/category_label_text"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/instructions_input_add"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="25dp"/>

                <!--            Spinner that allows category to be selected from predetermined list (breakfast, brunch, lunch, dinner, desserts, other)-->
                <Spinner
                    android:id="@+id/category_input_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:background="@color/secondary"
                    app:layout_constraintTop_toBottomOf="@id/category_label_add"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/category_error_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/error"
                    android:text=""
                    android:textSize="13sp"
                    app:layout_constraintTop_toBottomOf="@id/category_input_add"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <!-- Save Button allowing a user to save their recipe -->
                <!--            when logic is implemented, it should handle senarios when not all required fields have been filled in by failing to save and alerting the user -->
                <Button
                    android:id="@+id/save_button_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/secondary"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:padding="1dp"
                    app:layout_constraintTop_toBottomOf="@id/category_input_add"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/save_button_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </FrameLayout>
</layout>